<resources>
    <string name="app_name">Caldirola</string>
    <string name="title_activity_calendar">PlanActivity</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="choose_location_prompt">Wybierz lokalizację</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input entry is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="event_name_text">Event name</string>
    <string name="event_description_text">Event description</string>
    <string name="from_text">From</string>
    <string name="date_text">date</string>
    <string name="time_text">time</string>
    <string name="to_text">To</string>
    <string name="confirm_text">Confirm</string>
    <string name="task_name_text">Task name</string>
    <string name="task_description_text">Task description</string>
    <string name="deadline_text">Deadline</string>
    <string name="estimated_duration_text">Estimated duration [hh:mm]</string>
    <string name="priority_text">Priority</string>
    <string name="divisible_task_text">Divisible task</string>
    <string name="add_task_text">Add task</string>
    <string name="month_half_name_format">MMM</string>
    <string name="month_name_format">MMMM</string>
    <string name="day_name_format">EEEEE</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="agenda_event_hour_format">kk:mm</string>
    <string name="agenda_event_all_day">All DAY</string>
    <string name="agenda_event_day_duration">d</string>
    <string name="agenda_event_no_events">No events</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="wi_day_cloudy_gusts">&#xf000;</string>
    <string name="wi_day_cloudy_windy">&#xf001;</string>
    <string name="wi_day_cloudy">&#xf002;</string>
    <string name="wi_day_fog">&#xf003;</string>
    <string name="wi_day_hail">&#xf004;</string>
    <string name="wi_day_lightning">&#xf005;</string>
    <string name="wi_day_rain_mix">&#xf006;</string>
    <string name="wi_day_rain_wind">&#xf007;</string>
    <string name="wi_day_rain">&#xf008;</string>
    <string name="wi_day_showers">&#xf009;</string>
    <string name="wi_day_snow">&#xf00a;</string>
    <string name="wi_day_sprinkle">&#xf00b;</string>
    <string name="wi_day_sunny_overcast">&#xf00c;</string>
    <string name="wi_day_sunny">&#xf00d;</string>
    <string name="wi_day_storm_showers">&#xf00e;</string>
    <string name="wi_day_thunderstorm">&#xf010;</string>
    <string name="wi_cloudy_gusts">&#xf011;</string>
    <string name="wi_cloudy_windy">&#xf012;</string>
    <string name="wi_cloudy">&#xf013;</string>
    <string name="wi_fog">&#xf014;</string>
    <string name="wi_hail">&#xf015;</string>
    <string name="wi_lightning">&#xf016;</string>
    <string name="wi_rain_mix">&#xf017;</string>
    <string name="wi_rain_wind">&#xf018;</string>
    <string name="wi_rain">&#xf019;</string>
    <string name="wi_showers">&#xf01a;</string>
    <string name="wi_snow">&#xf01b;</string>
    <string name="wi_sprinkle">&#xf01c;</string>
    <string name="wi_storm_showers">&#xf01d;</string>
    <string name="wi_thunderstorm">&#xf01e;</string>
    <string name="wi_windy">&#xf021;</string>
    <string name="wi_night_alt_cloudy_gusts">&#xf022;</string>
    <string name="wi_night_alt_cloudy_windy">&#xf023;</string>
    <string name="wi_night_alt_hail">&#xf024;</string>
    <string name="wi_night_alt_lightning">&#xf025;</string>
    <string name="wi_night_alt_rain_mix">&#xf026;</string>
    <string name="wi_night_alt_rain_wind">&#xf027;</string>
    <string name="wi_night_alt_rain">&#xf028;</string>
    <string name="wi_night_alt_showers">&#xf029;</string>
    <string name="wi_night_alt_snow">&#xf02a;</string>
    <string name="wi_night_alt_sprinkle">&#xf02b;</string>
    <string name="wi_night_alt_storm_showers">&#xf02c;</string>
    <string name="wi_night_alt_thunderstorm">&#xf02d;</string>
    <string name="wi_night_clear">&#xf02e;</string>
    <string name="wi_night_cloudy_gusts">&#xf02f;</string>
    <string name="wi_night_cloudy_windy">&#xf030;</string>
    <string name="wi_night_cloudy">&#xf031;</string>
    <string name="wi_night_hail">&#xf032;</string>
    <string name="wi_night_lightning">&#xf033;</string>
    <string name="wi_night_rain_mix">&#xf034;</string>
    <string name="wi_night_rain_wind">&#xf035;</string>
    <string name="wi_night_rain">&#xf036;</string>
    <string name="wi_night_showers">&#xf037;</string>
    <string name="wi_night_snow">&#xf038;</string>
    <string name="wi_night_sprinkle">&#xf039;</string>
    <string name="wi_night_storm_showers">&#xf03a;</string>
    <string name="wi_night_thunderstorm">&#xf03b;</string>
    <string name="wi_celsius">&#xf03c;</string>
    <string name="wi_cloud_down">&#xf03d;</string>
    <string name="wi_cloud_refresh">&#xf03e;</string>
    <string name="wi_cloud_up">&#xf040;</string>
    <string name="wi_cloud">&#xf041;</string>
    <string name="wi_degrees">&#xf042;</string>
    <string name="wi_down_left">&#xf043;</string>
    <string name="wi_down">&#xf044;</string>
    <string name="wi_fahrenheit">&#xf045;</string>
    <string name="wi_horizon_alt">&#xf046;</string>
    <string name="wi_horizon">&#xf047;</string>
    <string name="wi_left">&#xf048;</string>
    <string name="wi_night_fog">&#xf04a;</string>
    <string name="wi_refresh_alt">&#xf04b;</string>
    <string name="wi_refresh">&#xf04c;</string>
    <string name="wi_right">&#xf04d;</string>
    <string name="wi_sprinkles">&#xf04e;</string>
    <string name="wi_strong_wind">&#xf050;</string>
    <string name="wi_sunrise">&#xf051;</string>
    <string name="wi_sunset">&#xf052;</string>
    <string name="wi_thermometer_exterior">&#xf053;</string>
    <string name="wi_thermometer_internal">&#xf054;</string>
    <string name="wi_thermometer">&#xf055;</string>
    <string name="wi_tornado">&#xf056;</string>
</resources>