<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rel"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/circle9"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="160dp"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/bg_ui" />

    <ImageView
        android:id="@+id/circle8"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="60dp"
        android:layout_marginRight="10dp"
        app:srcCompat="@drawable/circletransparant"
        tools:layout_alignParentRight="true" />

    <ImageButton
        android:id="@+id/circle7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="-25dp"
        android:background="@drawable/circletransparant" />

    <ImageButton
        android:id="@+id/circle4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="-10dp"
        android:layout_marginBottom="-35dp"
        android:background="@drawable/circletransparant" />

    <ImageButton
        android:id="@+id/circle3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="-35dp"
        android:layout_marginBottom="-10dp"
        android:background="@drawable/circle" />

    <ImageButton
        android:id="@+id/circle6"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-70dp"
        android:layout_marginBottom="-20dp"
        android:background="@drawable/circletransparant" />

    <ImageButton
        android:id="@+id/circle5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="85dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/circletransparant" />

    <ImageButton
        android:id="@+id/circle2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="115dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/circletransparant" />

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="@drawable/header2"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="Edit event"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="right"
        android:layout_marginTop="125dp"
        android:background="@drawable/circle"
        android:visibility="visible" />

    <ScrollView
        android:id="@+id/ae_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/head"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                tools:layout_marginTop="20dp">

                <LinearLayout
                    android:id="@+id/ee_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="50dp">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/ae_side_margin"
                        android:layout_marginRight="@dimen/ae_side_margin"
                        android:text="@string/event_name_text"
                        android:textColor="@color/colorPurple"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ee_input_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="@dimen/ae_bottom_margin"
                        android:ems="10"
                        android:fontFamily="sans-serif-light"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/ae_input_font_size" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/ae_side_margin"
                        android:layout_marginRight="@dimen/ae_side_margin"
                        android:text="@string/event_description_text"
                        android:textColor="@color/colorPurple"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ee_input_description"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="@dimen/ae_bottom_margin"
                        android:ems="10"
                        android:fontFamily="sans-serif-light"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/ae_input_font_size" />

                    <TextView
                        android:id="@+id/ee_since"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/ae_side_margin"
                        android:layout_marginTop="@dimen/ae_top_margin"
                        android:layout_marginRight="@dimen/ae_side_margin"
                        android:fontFamily="sans-serif"
                        android:text="@string/from_text"
                        android:textColor="@color/colorPurple"
                        android:textSize="18sp" />

                    <TableRow
                        android:id="@+id/ee_since_table"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/ee_start_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="@dimen/ae_top_margin"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="@dimen/ae_bottom_margin"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/date_text"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/ae_input_datetime_size"
                            tools:textAlignment="center" />

                        <TextView
                            android:id="@+id/ee_start_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="@dimen/ae_top_margin"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="@dimen/ae_bottom_margin"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/time_text"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/ae_input_datetime_size"
                            tools:fontFamily="sans-serif-light"
                            tools:textAlignment="center" />

                    </TableRow>

                    <TextView
                        android:id="@+id/ee_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/ae_side_margin"
                        android:layout_marginTop="@dimen/ae_top_margin"
                        android:layout_marginRight="@dimen/ae_side_margin"
                        android:fontFamily="sans-serif"
                        android:text="@string/to_text"
                        android:textColor="@color/colorPurple"
                        android:textSize="18sp" />

                    <TableRow
                        android:id="@+id/ee_to_table"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/ee_end_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="@dimen/ae_bottom_margin"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/date_text"
                            android:textColor="@color/black"
                            android:textSize="@dimen/ae_input_datetime_size"
                            tools:fontFamily="sans-serif-light" />

                        <TextView
                            android:id="@+id/ee_end_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/time_text"
                            android:textColor="@color/black"
                            android:textSize="@dimen/ae_input_datetime_size" />
                    </TableRow>


                    <Spinner
                        android:id="@+id/ee_location"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginLeft="@dimen/ae_side_margin"
                        android:layout_marginTop="@dimen/ae_top_margin"
                        android:layout_marginRight="@dimen/ae_side_margin"
                        android:layout_marginBottom="@dimen/ae_bottom_margin"
                        android:spinnerMode="dropdown" />

                    <TableRow
                        android:id="@+id/ee_search_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="5">

                        <AutoCompleteTextView
                            android:id="@+id/ee_location_search"
                            android:completionThreshold="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:dropDownAnchor="@id/ee_location_search"
                            android:fontFamily="sans-serif-light"
                            android:textSize="@dimen/ae_input_font_size"
                            android:layout_weight="4"
                            android:hint="Location"
                            />

                        <Button
                            android:id="@+id/ee_add_location_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/card"
                            android:scaleX="0.9"
                            android:scaleY="0.9"
                            android:text="Add"
                            android:textColor="#FFFFFF" />

                    </TableRow>

                    <Button
                        android:id="@+id/ee_remove_btn"
                        android:layout_height="70dp"
                        android:layout_width="78dp">
                    </Button>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv"
                android:layout_alignLeft="@+id/cv"
                android:layout_alignRight="@+id/cv"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="-30dp"
                android:layout_marginRight="35dp"
                android:elevation="10dp"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/ee_add_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/bg_ui"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/confirm_text"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="26sp"
                    tools:layout_gravity="center" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>